# 20250203django

./: .version.txt  builtin_classes.py  card.py  carddeck.py  exception_finally.py  fstring_shortcut.py  if_statement.py  iterables.py  jokerdeck.py  list_comps_and_gen_exprs.py  variables_and_values.py
ANSWERS/: string_fun.py
EXAMPLES/: creating_dicts.py  creating_tuples.py  emoji_misc.py  emoji_skin_tones.py  enumerate.py  exception_else.py  exception_generic.py  exception_multiple.py  f_strings_fun.py  function_basics.py  function_params_pos.py  getting_dict_values.py  indexing_and_slicing.py  (+18 more)
EXAMPLES/djangoexamples/superheroes/: MANIFEST.in  README.md  pyproject.toml  todo.txt
EXAMPLES/djangoexamples/superheroes/docs/source/: conf.py  index.rst
EXAMPLES/djangoexamples/superheroes/src/superheroes/: admin.py  admin2.py  models.py  models_plus.py  urls.py  views.py
EXAMPLES/djangoexamples/superheroes/src/superheroes/management/commands/: populate_superheroes.py
EXAMPLES/djangoexamples/superheroes/src/superheroes/migrations/: 0001_initial.py  0002_alter_city_id_alter_enemy_id_alter_power_id_and_more.py  0003_alter_city_table_alter_enemy_table_alter_power_table_and_more.py  0004_cityplus_enemyplus_powerplus_superheroplus_and_more.py  0005_rename_enemies_plus_superheroplus_enemies_and_more.py  0006_remove_enemyplus_powers_remove_superheroplus_city_and_more.py
EXAMPLES/djangoexamples/superheroes/src/superheroes/templates/: 404.html
EXAMPLES/djangoexamples/superheroes/src/superheroes/templates/superheroes/: home.html  sample.html  superheroes_base.html
(+224 files in other folders)
